# RATSQL

./: .gitignore  CMakeLists.txt  README.md  todo.txt
.circleci/: config.yml
docs/: Doxyfile  index.html
docs/docs_html/: _c_f_g_8h_source.html  _char_button_8h_source.html  _command_handler_8h_source.html  _earley_parser_8h_source.html  _exception_handler_8h_source.html  _highlighter_8h_source.html  _illegal_entry_exception_8h_source.html  _levenshtein_distance_8h_source.html  _levenshtein_test_8h_source.html  _lexer_8h_source.html  _main_window_8h_source.html  _parse_settings_8h_source.html  _parse_state_8h_source.html  _parse_template_8h_source.html  _query_test_8h_source.html  _r_a_expression_8h_source.html  _r_a_high_lighter_8h_source.html  _rat_is_cool-example.html  _replace_suggestion_8h_source.html  _s_q_l_high_lighter_8h_source.html  _s_q_l_translator_8h_source.html  _setting_button_8h_source.html  _shunting_algorithm_8h_source.html  _shunting_grid_8h_source.html  _shunting_yard_test_8h_source.html  _system_8h_source.html  _test_8h_source.html  _test_manager_8h_source.html  _text_edit_8h_source.html  _tokens_8h_source.html  _tree_node_8h_source.html  _undefined_token_exception_8h_source.html  _utils_8h_source.html  aboutdialog_8h_source.html  annotated.html  annotated_dup.js  class_about_dialog-members.html  class_about_dialog.html  class_basic_node-members.html  class_basic_node.html  (+173 more)
docs/docs_html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+25 more)
docs/docs_latex/: _c_f_g_8h_source.tex  _char_button_8h_source.tex  _command_handler_8h_source.tex  _earley_parser_8h_source.tex  _exception_handler_8h_source.tex  _highlighter_8h_source.tex  _illegal_entry_exception_8h_source.tex  _levenshtein_distance_8h_source.tex  _levenshtein_test_8h_source.tex  _lexer_8h_source.tex  _main_window_8h_source.tex  _parse_settings_8h_source.tex  _parse_state_8h_source.tex  _parse_template_8h_source.tex  _query_test_8h_source.tex  _r_a_expression_8h_source.tex  _r_a_high_lighter_8h_source.tex  _rat_is_cool-example.tex  _replace_suggestion_8h_source.tex  _s_q_l_high_lighter_8h_source.tex  _s_q_l_translator_8h_source.tex  _setting_button_8h_source.tex  _shunting_algorithm_8h_source.tex  _shunting_grid_8h_source.tex  _shunting_yard_test_8h_source.tex  _system_8h_source.tex  _test_8h_source.tex  _test_manager_8h_source.tex  _text_edit_8h_source.tex  _tokens_8h_source.tex  _tree_node_8h_source.tex  _undefined_token_exception_8h_source.tex  _utils_8h_source.tex  aboutdialog_8h_source.tex  annotated.tex  class_about_dialog.eps  class_about_dialog.tex  class_basic_node.eps  class_basic_node.tex  class_c_f_g.tex  (+76 more)
input/: grammar.json  relax-example-1.rlx  test.json  test2.json
libs/: json.hpp
output/: out.dot
recourses/: DefNotSuspicious.trustMe.rtf  words_alpha.txt
resources/: styleSheet.qss  words_small.txt
src/: Token.h  main.cpp  main_cmd.cpp  main_gui.cpp  main_parsing.cpp  main_shunting_yard.cpp  main_tests.cpp
src/algorithms/: LevenshteinDistance.cpp  LevenshteinDistance.h  ShuntingAlgorithm.cpp  ShuntingAlgorithm.h  ShuntingGrid.cpp  ShuntingGrid.h
src/datastructures/: CFG.cpp  CFG.h  Node.cpp  Node.h  ParseSettings.h  ParseTree.cpp  ParseTree.h  RAExpression.cpp  RAExpression.h  ReplaceSuggestion.h  SQLStatement.cpp  SQLStatement.h
src/exceptions/: ExceptionHandler.cpp  ExceptionHandler.h  IllegalEntryException.h  UndefinedTokenException.h
src/gui/: Buttons.cpp  Buttons.h  CharButton.cpp  CharButton.h  Highlighter.cpp  Highlighter.h  InputBox.cpp  InputBox.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OutputBox.cpp  OutputBox.h  RAHighLighter.cpp  RAHighLighter.h  SQLHighLighter.cpp  SQLHighLighter.h  SettingButton.cpp  SettingButton.h  TextEdit.cpp  TextEdit.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
src/io/: CommandHandler.cpp  CommandHandler.h  GUIHandler.cpp  GUIHandler.h  ParseCommand.cpp  ParseCommand.h  Parsers.cpp  Parsers.h
src/parser/: CFG for Relax.txt  EarleyParser.cpp  EarleyParser.h  Grammar.grammar  Grammar.h  Lexer.cpp  Lexer.h  ParseState.cpp  ParseState.h  ParseTemplate.h  ParseToken.cpp  ParseToken.h  Parser.cpp  Parser.h  RelaxParser.cpp  RelaxParser.h  SQLTranslator.cpp  SQLTranslator.h  Token.h  TokenTemplate.cpp  TokenTemplate.h  Tokens.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  UndefinedTokenException.h
src/parsers/: Parsers.cpp  Parsers.h  ShuntingYardParser.cpp  ShuntingYardParser.h
src/system/: System.cpp  System.h
src/tests/: LevenshteinTest.cpp  LevenshteinTest.h  QueryTest.cpp  QueryTest.h  ShuntingYardTest.cpp  ShuntingYardTest.h  Test.cpp  Test.h  TestManager.cpp  TestManager.h
src/utilities/: Parsers.cpp  Parsers.h  Token.h  Utils.cpp  Utils.h
